# torero-api

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/: openapi.json  openapi.yaml
scripts/: generate_openapi.py  run_api.py  torero_api_ctl.sh
tests/: test_core.py
torero_api/: __main__.py  server.py
torero_api/api/: __init__.py
torero_api/api/v1/endpoints/: __init__.py  decorators.py  repositories.py  secrets.py  services.py
torero_api/core/: __init__.py  torero_executor.py
torero_api/models/: __init__.py  service.py
